assets/css/style.css
/* ... */
@media (max-width:767px) {
  #contact-map {
    height: 350px;
  }
}
#contact-map iframe {
  width: 100%;
  height: 100%;
}

/*----------------------------------------*/
/*  7.4 Counter css
/*----------------------------------------*/
.counter-item {
  text-align: center;
  margin-bottom: 50px;
}
.counter-item .title {
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: 0.9;
  margin-bottom: 15px;
  font-size: 48px;
  font-weight: 300;
  color: var(--bd-theme-primary);
}
.counter-item p {
  margin-bottom: 0;
  line-height: 1.6;
  color: var(--bd-heading-primary);
}

/*----------------------------------------*/
/*  7.5 Cta css
/*----------------------------------------*/
.cta-bg {
  background-image: url('../imgs/bg/cta_bg.webp');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
  padding: 150px 0 160px;
  z-index: 1;
}
@media (max-width:1199px) {
  .cta-bg {
    padding: 110px 0 120px;
  }
  .cta-bg .section-title {
    margin-bottom: 20px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .cta-bg {
    padding: 80px 0px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .cta-bg {
    padding: 70px 0px;
  }
}
.cta-bg::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #0C1020;
  opacity: 0.6;
  z-index: -1;
}

.white-title .title {
  color: var(--bd-common-white);
}

.cta-btn-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .cta-btn-wrap {
    justify-content: start;
  }
}
.cta-btn-wrap .or {
  text-transform: uppercase;
  color: var(--bd-common-white);
  font-size: 16px;
  margin: 15px 20px 0;
}
.cta-btn-wrap .btn {
  margin: 15px 0 0;
}
.cta-btn-wrap .transparent-btn {
  border-color: var(--bd-common-white);
  color: var(--bd-common-white);
}
.cta-btn-wrap .transparent-btn::before {
  background: var(--bd-common-white);
}
.cta-btn-wrap .transparent-btn:hover {
  color: var(--bd-theme-primary);
}

.pricing-cta-content .title {
  font-size: 20px;
  margin-bottom: 20px;
}
.pricing-cta-content p {
  margin-bottom: 45px;
}

.queries-area {
  background-position: center;
  background-size: cover;
  position: relative;
  margin-bottom: 90px;
  padding: 110px 0 0;
  z-index: 1;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .queries-area {
    padding: 80px 0 0;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .queries-area {
    padding: 70px 0 0;
  }
}
.queries-area::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #0C1020;
  opacity: 0.7;
  z-index: -1;
}

.queries-form form {
  background: #0C1020;
  padding: 60px 80px 40px;
  margin-bottom: -90px;
  position: relative;
  z-index: 1;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .queries-form form {
    padding: 40px 30px 20px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .queries-form form {
    padding: 40px 50px 20px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .queries-form form {
    padding: 40px 50px 20px;
  }
}
@media (max-width: 575px) {
  .queries-form form {
    padding: 30px 25px 10px;
  }
}
.queries-form form .form-grp {
  margin-bottom: 20px;
}
.queries-form form input {
  width: 100%;
  border: none;
  border-radius: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  -ms-border-radius: 0;
  -o-border-radius: 0;
  font-size: 15px;
  padding: 19px 20px;
  color: var(--bd-text-body);
}
.queries-form form input::placeholder {
  font-size: 15px;
  color: var(--bd-text-body);
}
.queries-form form button {
  border-radius: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  -ms-border-radius: 0;
  -o-border-radius: 0;
  min-width: 200px;
  text-align: center;
  justify-content: center;
}
@media (max-width:991px) {
  .queries-form form button {
    min-width: 100%;
    min-height: 60px;
  }
}
@media (max-width:1199px) {
  .queries-form form .row {
    --bs-gutter-x: 20px;
  }
}
@media (max-width:991px) {
  .queries-form form .row .col {
    width: 50% !important;
    flex: 0 0 50% !important;
  }
}
@media (max-width:767px) {
  .queries-form form .row .col {
    width: 100% !important;
    flex: 0 0 100% !important;
  }
}
.queries-form form .row .col:last-child {
  width: 230px;
  flex: 0 0 230px;
}
@media (max-width:1199px) {
  .queries-form form .row .col:last-child {
    width: 220px;
    flex: 0 0 220px;
  }
}

/*----------------------------------------*/
/*  7.6 Error css
/*----------------------------------------*/
.error-img img {
  max-width: 470px;
}
@media (max-width: 575px) {
  .error-img img {
    max-width: 380px;
  }
}
@media (max-width:450px) {
  .error-img img {
    max-width: 100%;
  }
}

.error-content {
  padding: 0 30px;
}
@media max-lg {
  .error-content {
    padding: 0 0px;
  }
}
.error-content .title {
  font-size: 36px;
  margin-bottom: 22px;
}
.error-content p {
  margin-bottom: 45px;
  color: var(--bd-heading-primary);
}

/*----------------------------------------*/
/*  7.6 Error css
/*----------------------------------------*/
@media (max-width:991px) {
  .faq-map-area {
    margin-top: 50px;
  }
}

.accordion-item {
  border: 1px solid var(--bd-border-primary);
}

.accordion-button {
  color: var(--bd-heading-primary);
  padding: 17px 25px;
  font-size: 18px;
  line-height: 1.45;
}
@media (max-width:767px) {
  .accordion-button {
    align-items: baseline;
  }
}
@media (max-width: 575px) {
  .accordion-button {
    padding: 17px 10px;
  }
}
.accordion-button:not(.collapsed) {
  color: var(--bd-heading-primary);
  background-color: transparent;
  box-shadow: none;
}
/* ... */

